src/perl6_curl.h

int perl6_curlopt_buffersize ();
int perl6_curlopt_nosignal ();
int perl6_curlopt_share ();
int perl6_curlopt_proxytype ();
int perl6_curlopt_accept_encoding ();
int perl6_curlopt_private ();
int perl6_curlopt_http200aliases ();
int perl6_curlopt_unrestricted_auth ();
int perl6_curlopt_ftp_use_eprt ();
int perl6_curlopt_httpauth ();
int perl6_curlopt_ssl_ctx_function ();
int perl6_curlopt_ssl_ctx_data ();
int perl6_curlopt_ftp_create_missing_dirs ();
int perl6_curlopt_proxyauth ();
int perl6_curlopt_ftp_response_timeout ();
int perl6_curlopt_ipresolve ();
int perl6_curlopt_maxfilesize ();
int perl6_curlopt_infilesize_large ();
int perl6_curlopt_resume_from_large ();
int perl6_curlopt_maxfilesize_large ();
int perl6_curlopt_netrc_file ();
int perl6_curlopt_use_ssl ();
int perl6_curlopt_postfieldsize_large ();
int perl6_curlopt_tcp_nodelay ();
int perl6_curlopt_ftpsslauth ();
int perl6_curlopt_ioctlfunction ();
int perl6_curlopt_ioctldata ();
int perl6_curlopt_ftp_account ();
int perl6_curlopt_cookielist ();
int perl6_curlopt_ignore_content_length ();
int perl6_curlopt_ftp_skip_pasv_ip ();
int perl6_curlopt_ftp_filemethod ();
int perl6_curlopt_localport ();
int perl6_curlopt_localportrange ();
int perl6_curlopt_connect_only ();
int perl6_curlopt_conv_from_network_function ();
int perl6_curlopt_conv_to_network_function ();
int perl6_curlopt_conv_from_utf8_function ();
int perl6_curlopt_max_send_speed_large ();
int perl6_curlopt_max_recv_speed_large ();
int perl6_curlopt_ftp_alternative_to_user ();
int perl6_curlopt_sockoptfunction ();
int perl6_curlopt_sockoptdata ();
int perl6_curlopt_ssl_sessionid_cache ();
int perl6_curlopt_ssh_auth_types ();
int perl6_curlopt_ssh_public_keyfile ();
int perl6_curlopt_ssh_private_keyfile ();
int perl6_curlopt_ftp_ssl_ccc ();
int perl6_curlopt_timeout_ms ();
int perl6_curlopt_connecttimeout_ms ();
int perl6_curlopt_http_transfer_decoding ();
int perl6_curlopt_http_content_decoding ();
int perl6_curlopt_new_file_perms ();
int perl6_curlopt_new_directory_perms ();
int perl6_curlopt_postredir ();
int perl6_curlopt_ssh_host_public_key_md5 ();
int perl6_curlopt_opensocketfunction ();
int perl6_curlopt_opensocketdata ();
int perl6_curlopt_copypostfields ();
int perl6_curlopt_proxy_transfer_mode ();
int perl6_curlopt_seekfunction ();
int perl6_curlopt_seekdata ();
int perl6_curlopt_crlfile ();
int perl6_curlopt_issuercert ();
int perl6_curlopt_address_scope ();
int perl6_curlopt_certinfo ();
int perl6_curlopt_username ();
int perl6_curlopt_password ();
int perl6_curlopt_proxyusername ();
int perl6_curlopt_proxypassword ();
int perl6_curlopt_noproxy ();
int perl6_curlopt_tftp_blksize ();
int perl6_curlopt_socks5_gssapi_service ();
int perl6_curlopt_socks5_gssapi_nec ();
int perl6_curlopt_protocols ();
int perl6_curlopt_redir_protocols ();
int perl6_curlopt_ssh_knownhosts ();
int perl6_curlopt_ssh_keyfunction ();
int perl6_curlopt_ssh_keydata ();
int perl6_curlopt_mail_from ();
int perl6_curlopt_mail_rcpt ();
int perl6_curlopt_ftp_use_pret ();